# kingdom-gba

./: .clang-format  .clang-tidy  .editorconfig  .gdbinit  .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  compile_flags.txt  flake.nix  justfile
.cargo/: config.toml
gfx/: background1.grit  background1.ora  ground1.grit  king2.ora
inc/: audio.h  cursor_scroller.h  debug.h  export.h  game.h  hexes.h  hexmap.h  input.h  interrupts.h  mdspan.h  perf.h  point.h  popup.h  scrolling_map.h  sprite.h  state.h  tiles.h  tty.h  util.h
linker_scripts/: mono_boot.ld
src/: audio.cpp  config.cpp  cursor_scroller.cpp  debug.cpp  game.cpp  hexes.cpp  hexmap.cpp  input.cpp  interrupts.cpp  main.cpp  main.rs  perf.cpp  popup.cpp  scrolling_map.cpp  sprite.cpp  state.cpp  tty.cpp  util.cpp
